Footer has been Designed

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@emotion/server": "latest",
     "@emotion/styled": "latest",
     "@mui/icons-material": "latest",
-    "@mui/material": "latest",
+    "@mui/material": "^5.14.14",
     "next": "latest",
     "react": "latest",
     "react-dom": "latest",
