--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@emotion/styled": "latest",
     "@mui/icons-material": "latest",
     "@mui/material": "latest",
+    "@mui/styles": "^5.14.14",
     "next": "latest",
     "react": "latest",
     "react-dom": "latest",
