--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,8 @@
   "include": [
     "next-env.d.ts",
     "**/*.ts",
-    "**/*.tsx"
+    "**/*.tsx",
+    // "node_modules/@mui"
   ],
   "exclude": [
     "node_modules"
