--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/server": "latest",
     "@emotion/styled": "latest",
     "@mui/icons-material": "latest",
+    "@mui/lab": "^5.0.0-alpha.150",
     "@mui/material": "latest",
     "@mui/styles": "latest",
     "next": "latest",
