sharp pkg added for next build image

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next": "latest",
     "react": "latest",
     "react-dom": "latest",
+    "sharp": "^0.32.6",
     "yarn": "^1.22.19"
   },
   "devDependencies": {
