--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next": "latest",
     "react": "latest",
     "react-dom": "latest",
+    "react-intersection-observer": "^9.5.3",
     "yarn": "^1.22.19"
   },
   "devDependencies": {
