--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/lab": "^5.0.0-alpha.150",
     "@mui/material": "latest",
     "@mui/styles": "latest",
+    "framer-motion": "^10.16.5",
     "next": "latest",
     "react": "latest",
     "react-dom": "latest",
