--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "latest",
     "react-dom": "latest",
     "react-intersection-observer": "^9.5.3",
+    "react-material-ui-carousel": "^3.4.2",
     "sharp": "^0.32.6",
     "yarn": "^1.22.19"
   },
