--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "node": "18.17.0"
   },
   "scripts": {
-    "dev": "sst bind next dev",
+    "dev": "next dev",
     "sst-dev": "sst dev",
     "build": "next build",
     "start": "next start",
